force-app/main/default/objects/Historic_Data_c__x/Historic_Data_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Target</externalDataSource>
    <externalName>Historic_Data__c</externalName>
    <label>Historic Data</label>
    <pluralLabel>Historic Datas</pluralLabel>
</CustomObject>