force-app/main/default/objects/Historic_Data_c__x/fields/Company_or_Family_c__c.field-meta.xml
<CustomField>
    <fullName>Company_or_Family_c__c</fullName>
    <externalDeveloperName>Company_or_Family__c</externalDeveloperName>
    <label>Company or Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>