force-app/main/default/objects/Historic_Data_c__x/fields/Purchase_Data_c__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Data_c__c</fullName>
    <externalDeveloperName>Purchase_Data__c</externalDeveloperName>
    <label>Purchase Data</label>
    <type>Date</type>
</CustomField>