force-app/main/default/objects/Historic_Data_c__x/fields/Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_c__c</fullName>
    <externalDeveloperName>Revenue__c</externalDeveloperName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>