force-app/main/default/objects/Historic_Data_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>DisplayUrl</columns>
    <columns>Company_or_Family_c__c</columns>
    <columns>Purchase_Data_c__c</columns>
    <columns>Revenue_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>